docs/Grammar.txt

Left-recursion eliminated grammar for EventScript

script ::= exp {modifier} '=>' action |
           block

-- Rule modifiers appear between the condition expression and '=>'.
-- Multiple modifiers may be combined (e.g. condition single cooldown 5 => ...).
modifier ::= 'single'               -- cancel any pending waits/timers from prior run before starting fresh
           | 'since' exp            -- condition must have been true for exp seconds
           | 'debounce' exp         -- wait exp seconds after last fire before running action (implies single)
           | 'cooldown' exp         -- suppress re-firing for exp seconds after action runs
           | 'every' exp            -- fire only on every exp-th true evaluation

action ::= block

block ::= {stat [';']} [laststat [';'] ]

stat ::= varlist '=' explist |
         functioncall |
         getprop |
         do block end |
         while exp do block end |
         repeat block until exp |
         if exp then block {elseif exp then block} [else block] end |
         case { '||' exp '>>' block } end
         for Name '=' exp ',' exp [',' exp] do block end |
         for namelist in explist do block end |
         local namelist ['=' explist] |
         setprop |
         incvar |
         scenedecl

-- Scene declaration (soft keyword; 'scene' is a plain identifier used as keyword)
-- Desugars to:  Name = Scene({ activate={...} [, deactivate={...}] })
-- Short form:   all entries go into activate
-- Long form:    explicit activate: and/or deactivate: subsections (order irrelevant)
-- Entry values: literals are stored directly; non-literals are wrapped in a
--               zero-arg lambda and re-evaluated at activation/deactivation time.
scenedecl ::= 'scene' Name '=' '{' sceneBody '}'

sceneBody ::= sceneEntries                                       -- short form (activate-only)
            | { ('activate' | 'deactivate') ':' '{' sceneEntries '}' [','] }  -- long form

sceneEntries ::= { sceneEntry [','] }

sceneEntry ::= primaryprefix ':' Name '=' exp

-- Scene usage (get-property syntax activates/deactivates the scene):
--   sceneName:activate      -- run activate body
--   sceneName:deactivate    -- run deactivate body (error if none defined)

incvar ::= var '+=' exp | var '-=' exp | var '*=' exp | var '/=' exp

laststat ::= return [explist] | break

varlist ::= var {',' var}

namelist ::= Name {',' Name}

explist ::= exp {',' exp}

-- Expression with eliminated left recursion (handles binary operators)
exp ::= orexp

orexp ::= andexp {'|' andexp}

andexp ::= relexp {'&' relexp}

relexp ::= concatexp {relop concatexp}

relop ::= '<' | '<=' | '>' | '>=' | '==' | '~='

concatexp ::= addexp {'..' addexp}

addexp ::= mulexp {addop mulexp}

addop ::= '+' | '-'

mulexp ::= unaryexp {mulop unaryexp}

mulop ::= '*' | '/' | '%'

unaryexp ::= unop unaryexp | powexp

unop ::= '-' | '!' | 't/' | 'n/' | '+/'

powexp ::= primaryexp ['^' unaryexp]

primaryexp ::= nil | false | true | Number | String | '...' |
               function | lambdaexp | listcomp | tableconstructor | prefixexp

-- List comprehension: evaluates expr for each element of iter (via ipairs),
-- collecting results into a new array.  The optional 'if' guard filters elements.
listcomp ::= '[' exp 'for' Name 'in' exp ['if' exp] ']'

-- Arrow-lambda: concise anonymous function with a single expression body.
-- Single-param form needs no parentheses; multi-param and zero-param forms
-- require parentheses to avoid ambiguity with grouped expressions.
lambdaexp ::= Name '->' exp
            | '(' [namelist] ')' '->' exp

-- Prefix expressions with eliminated left recursion.
-- All suffix forms are handled uniformly by postfix.
-- Disambiguation of getprop / setprop / functioncall is done at the statement
-- and expression level by inspecting what follows the postfix chain.
prefixexp ::= primaryprefix {postfix}

-- '$'Name  = Fibaro global variable
-- '$$'Name = QuickApp variable
-- '$$$'Name = internalStorage (persistent) variable
primaryprefix ::= Name | '$'Name | '$$'Name | '$$$'Name | '(' exp ')'

-- postfix covers all suffix forms; ':' Name is listed before ':' Name args
-- so a parser must attempt the longer match (':' Name args) first.
postfix ::= '[' exp ']' | '.' Name | ':' Name args | ':' Name | args

-- Variable: a prefixexp whose last postfix (if any) is not args or ':' Name args
-- '$'-prefixed forms are valid lvalues (assignment targets)
var ::= Name {varpostfix} | '$'Name | '$$'Name | '$$$'Name

varpostfix ::= '[' exp ']' | '.' Name

-- Function call: prefixexp whose last postfix is args or ':' Name args
functioncall ::= primaryprefix {postfix} args
               | primaryprefix {postfix} ':' Name args

-- getprop: prefixexp ending with ':' Name (no args)
getprop ::= primaryprefix {postfix} ':' Name
          | '{' [fieldlist] '}' ':' Name

-- setprop: prefixexp ending with ':' Name '=' exp
setprop ::= primaryprefix {postfix} ':' Name '=' exp
          | '{' [fieldlist] '}' ':' Name '=' exp

args ::= '(' [explist] ')' | tableconstructor | String

tableconstructor ::= '{' [fieldlist] '}'

fieldlist ::= field {fieldsep field} [fieldsep]

field ::= '[' exp ']' '=' exp | Name '=' exp | exp

fieldsep ::= ',' | ';'


-- Reserved keywords: do end while repeat until if then elseif else for in
--                    local return break
-- Modifier keywords: restart since debounce cooldown every
-- Soft keyword:      scene  (parsed as identifier; only treated as keyword when
--                    followed by Name '=')
